# case-board-fanglv

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml
agent-work/075/: ACCEPTANCE.md  status.md  task.md
agent-work/076/: contract.md  final_acceptance.md
release/: latest.json
scripts/: README-release-resumable.md  mcp_stub_server.py  publish-release-resumable.ps1  release-gate.mjs  release-resume-core.psm1  release.sh  run-logic-tests.mjs  test-interest-calc.cjs  test-opt-n1-navigation.cjs  test-release-resume.ps1  请先阅读.txt
scripts/windows-upgrade-validation/: Invoke-PinnedCargo.ps1  Invoke-UpgradeValidation.ps1  README.md  capture-window.ps1  db_audit.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_updater_signature.rs  yuandian_probe.rs
src-tauri/migrations/: 0001_initial.sql  0002_aggregation_and_milestones.sql  0003_supporting_tables.sql  0004_fts_search.sql  0005_documents_cache_and_softdelete.sql  0006_workflow_status.sql  0007_deepseek_balance.sql  0008_llm_global_extract.sql  0009_deepseek_day_start_balance.sql  0010_yuandian_assessment.sql  (+29 more)
telemetry/: README.md  summarize.py  summary.sh  supabase_schema.sql
(+310 files in other folders)
